Задание 6/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80       # Порт сервиса
      targetPort: 80 # Порт контейнера
  type: ClusterIP
